# egm_control

./: CMakeLists.txt  README.md  package.xml
include/: EGMHelper.hpp  PracticalSocket.h  ROSHelper.hpp  RobotController.hpp
launch/: egmcontrol.launch  example.launch
rapid/: egm_control.mod
src/: EGMControl.cpp  EGMControl.py  ROSHelper.cpp  ROSHelper.py  RobotController.cpp  RobotController.py  bag2csv.sh  controller.py  datasaver.py  debugger.py  egm_control.py  example-block.py  example.py  object_tracker.py  topic_publisher.py
src/control/: example-block.py  example-pos-3d.py  example-vel-1d.py  example-vel-3d.py  example-vel-6d.py  keep-moving.py
src/helper/: desired_trajectory_publisher.py  egm_helper.py  helper.py  publish_tf.py  save_rosbag.py  vicon_publisher.py  visualize_trajectory.py
src/helpers/: EGMHelper.cpp  EGMHelper.py  PracticalSocket.cpp  egm.pb.cc  egm.pb.h  egm_helper.py
src/py/: ROSHelper.py  RobotController.py
test/: bagstats-pos-3d.py  bagstats-vel-1d.py  bulk-stats.py  plot.py  stats.py  stats_bag.py
test-config/: egm_control.pmd
test/config/: egm_control.pmd  egm_control_environment.sh
test/old/: bulk-stats.py  plot.py  stats.py
